# gak

./: .gitignore  CMakeLists.txt  server  testing  webclient
src/: main.cpp
src/client/: web_client.cpp
src/css/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  test.cpp
src/renderer/: dom_node.cpp  dom_node.h  html_parser.cpp  html_parser.h  main.cpp  renderer.cpp  renderer.h
